--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -14,7 +14,7 @@ jobs:
           go-version: oldstable
           cache: true
       - name: Tests
-        run: go test -race -v ./...
+        run: go test -race -tags test_env -v ./...
       - name: Coverage report
         uses: ncruces/go-coverage-report@v0.3.0
         with:
