temp: point to custom go-coverage-report tool for coverage

--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Tests
         run: go test -race -tags test_env -v ./...
       - name: Coverage report
-        uses: ncruces/go-coverage-report@v0.3.0
+        uses: LucaWolf/go-coverage-report@feat/go-build-tags
         with:
           amend: true
         continue-on-error: true
